0026596: Visualization - hidden twice times structure should not be selectable

Activated selection mode for the object that was displayed previously is now added to global status;
Test case for issue #26596